--- a/src/styles/components/_layout.scss
+++ b/src/styles/components/_layout.scss
@@ -1,4 +1,4 @@
-$color-top-menu-bg: #223342;
+$color-top-menu-bg: #224222;
 $color-main-bg:     #fafcfe;
 $color-border-sidebar-switch-button: #bfbfbf;
 $color-bg-sidebar-switch-button: #eeeeee;
@@ -11,7 +11,7 @@ $color-bg-sidebar-switch-button: #eeeeee;
 }
 
 #header {
-  background: radial-gradient(circle at 1.98% 20.98%, #4b6cb7, transparent 100%), radial-gradient(circle at 98.02% 20.98%, #2e4063, transparent 100%), radial-gradient(circle at 50% 50%, #19c8b5, #19c8b5 100%);
+  background: radial-gradient(circle at 1.98% 20.98%, #90d500, transparent 100%), radial-gradient(circle at 98.02% 20.98%, #2e4063, transparent 100%), radial-gradient(circle at 50% 50%, #19c8b5, #19c8b5 100%);
   padding: 10px 30px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   color: white;
