Rolls back logo
Signed-off-by: Daniel Kastl <daniel@georepublic.de>

--- a/src/styles/components/_layout.scss
+++ b/src/styles/components/_layout.scss
@@ -23,7 +23,7 @@ $color-bg-sidebar-switch-button: #eeeeee;
   h1 {
     padding-bottom: 20px;
     padding-left: 100px;
-    background: url(../images/logo.png) no-repeat 2px;
+    // background: url(../images/logo.png) no-repeat 2px;
     background-size: contain;
     color: #fff;
   }
